Bugfix - grow pages not scrolling on mobile

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -27,6 +27,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow: scroll;
 }
 
 #footer {
@@ -253,9 +254,9 @@ input[type=submit]:hover {
         width: 75%;
     }
 
-    body {
+    /* body {
         height: 100vh;
-    }
+    } */
 
     #home_button {
         display: none;
